# finpulse

./: .dockerignore  .env.example  .env.prod.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .flake8  Dockerfile  Makefile  entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py
backend/app/application/interfaces/: llm.py  user.py
backend/app/application/services/: authz_chat.py  public_news_scheduler.py
backend/app/application/use_cases/: news_analytics.py  summarize_article.py
backend/app/core/: constants.py  settings.py
backend/app/domain/entities/: article_summary.py  chat_message.py  news_block.py  user.py
backend/app/infrastructure/: dependencies.py  middleware.py  utils.py
backend/app/infrastructure/database/: base.py  chat_repo_impl.py  chat_session_repo_impl.py  models.py  news_cache_repo_impl.py  news_repo_impl.py  seed_rbac.py  user_repo_impl.py
backend/app/infrastructure/llm/: gigachat_llm_service.py  ollama_llm_service.py  scraper_service.py
backend/app/infrastructure/moex/: __init__.py  (+1 more)
backend/app/presentation/: main.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_users_api.py  test_auth_api.py  test_public_api.py
backend/tests/unit/: test_auth_use_cases.py  test_chat_prompt_profile.py  test_chat_rules.py  test_gigachat_llm_service.py  test_moex_service.py  test_news_analytics.py  test_personal_news_rss.py  test_public_news_filtering.py  test_public_news_gigachat.py  test_rss_service.py
(+95 files in other folders)
